opam-version: "2.0"
maintainer: "Jane Street developers"
authors: ["Jane Street Group, LLC"]
homepage: "https://github.com/janestreet/regex_parser_intf"
bug-reports: "https://github.com/janestreet/regex_parser_intf/issues"
dev-repo: "git+https://github.com/janestreet/regex_parser_intf.git"
doc: "https://ocaml.janestreet.com/ocaml-core/latest/doc/regex_parser_intf/index.html"
license: "MIT"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml" {>= "5.1.0"}
  "base"
  "dune" {>= "3.17.0"}
]
available: arch != "arm32" & arch != "x86_32"
synopsis: "Interface shared by Re_parser and Re2.Parser"
description: "
"
